# abd-bpf

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cleanup  run
abd/: Cargo.toml  build.rs
abd-bpf/: Cargo.toml  build.rs
abd-bpf-common/: Cargo.toml
abd-bpf-common/src/: lib.rs
abd-bpf-ebpf/: Cargo.toml
abd-bpf-ebpf/src/: abd_server.rs  abd_writer.rs  xdp_pass.rs
abd-bpf/src/: abd_writer.rs  xdp_pass.rs
abd-client/: Cargo.toml
abd-client/src/: main.rs
abd-common/: Cargo.toml
abd-common/src/: constants.rs  lib.rs  map_types.rs  maps.rs  message.rs  msg.rs  tag.rs  value.rs
abd-ebpf/: Cargo.toml  build.rs
abd-ebpf/src/: abd_reader.rs  abd_server.rs  abd_tc.rs  abd_writer.rs  abd_xdp.rs  helpers.rs  lib.rs  reader.rs  server.rs  utils.rs  writer.rs  xdp_pass.rs
abd-ebpf/src/helpers/: common.rs  errors.rs  offsets.rs  tc.rs  utils.rs  xdp.rs
abd-ebpf/src/utils/: common.rs  error.rs  spinlock.rs  tc.rs
abd-userspace/: Cargo.toml
abd-userspace/src/: error.rs  lib.rs  network.rs  node.rs  protocol.rs  server.rs
abd/src/: abd_reader.rs  abd_server.rs  abd_writer.rs  config.rs  helpers.rs  lib.rs  reader.rs  server.rs  writer.rs  xdp_pass.rs
abd/src/helpers/: iface_utils.rs  map_utils.rs
bench/: Cargo.toml
bench/src/: cli.rs  latency.rs  lib.rs  main.rs  operations.rs  throughput.rs  types.rs  utils.rs
client/: Cargo.toml  Makefile  README.md  abd_client.c
client/src/: main.rs
common/: checksum_helpers.h  common.mk  common_abd.h  rewrite_helpers.h
ebpf-actors/: Cargo.toml  build.rs
ebpf-actors-common/: Cargo.toml
ebpf-actors-common/src/: lib.rs
ebpf-actors-ebpf/: Cargo.toml
ebpf-actors-ebpf/src/: main.rs
ebpf-actors/src/: main.rs
scripts/: cleanup  evaluate.py  requirements.txt  run  run.py
scripts/evaluation/: __init__.py  benchmark_runner.py  config.py  latency_analyzer.py  report_generator.py  scalability_analyzer.py  throughput_analyzer.py
scripts/monitoring/: README.md  __init__.py  analyze_cpu.py  analyze_ebpf.py  cpu_monitor.py  ebpf_monitor.py
scripts/testenv/: README.org  testenv.sh
server/: Makefile  README.md  xdp_prog_kern.c  xdp_prog_user.c
tools/stats/: Makefile  xdp_stats.c
