[workspace]
resolver = "2"
members = ["abd", "abd-common", "abd-ebpf", "bench", "client"]
default-members = ["abd", "abd-common", "bench", "client"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.37", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = true }
heapless = "0.8.0"
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
netns-rs = "0.1.0"
num_cpus = "1.0"
postcard = "1.0.0"
rkyv = { version = "0.8.10", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde-json-core = "0.6.0"
socket2 = "0.5.10"
thiserror = { version = "2.0.12", default-features = true }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.abd-ebpf]
debug = 2
codegen-units = 1
