[package]
name = "abd-client"
version = "0.1.0"
edition = "2021"

[dependencies]
abd-common = { path = "../abd-common" }
rkyv = "0.8.10"
clap = { workspace = true, default-features = true, features = ["derive"] }
log.workspace = true
anyhow.workspace = true
env_logger.workspace = true

[[bin]]
name = "abd-client"
path = "src/main.rs"
