[package]
name = "abd-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
abd-common = { path = "../abd-common" }

aya-ebpf.workspace = true
aya-log-ebpf.workspace = true

network-types = "0.0.7"
rkyv = { version = "0.8.10", default-features = false, features = [
    "bytecheck",
] }

[build-dependencies]
which.workspace = true

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "xdp-pass"
path = "src/xdp_pass.rs"
