[package]
name = "abd-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
abd-common = { path = "../abd-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"
rkyv = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "xdp-pass"
path = "src/xdp_pass.rs"
