[package]
name = "abd-ebpf"
version = "0.1.0"
edition = "2021"

[features]
default = []
multi-writer = []

[dependencies]
abd-common = { path = "../abd-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"
rkyv = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "abd-tc"
path = "src/abd_tc.rs"

[[bin]]
name = "abd-xdp"
path = "src/abd_xdp.rs"

[[bin]]
name = "xdp-pass"
path = "src/xdp_pass.rs"
