[package]
name = "abd"
version = "0.1.0"
edition = "2021"

[dependencies]
abd-common = { path = "../abd-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }

network-interface = "2.0.1"
netns-rs = "0.1.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
abd-ebpf = { path = "../abd-ebpf" }

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "xdp-pass"
path = "src/xdp_pass.rs"
