[package]
name = "abd"
version = "0.1.0"
edition = "2021"

[dependencies]
abd-common = { path = "../abd-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }

network-interface = "2.0.1"
netns-rs = "0.1.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
abd-ebpf = { path = "../abd-ebpf" }

[[bin]]
name = "abd-tc"
path = "src/bin/abd_tc.rs"

[[bin]]
name = "abd-xdp"
path = "src/bin/abd_xdp.rs"

[[bin]]
name = "xdp-pass"
path = "src/bin/xdp_pass.rs"
