[package]
name = "abd"
version = "0.1.0"
edition = "2021"

[features]
default = ["multi-writer"]
multi-writer = []

[dependencies]
abd-common = { path = "../abd-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
netns-rs = { workspace = true }
num_cpus = { workspace = true }
rkyv = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
abd-ebpf = { path = "../abd-ebpf" }

[[bin]]
name = "abd-ebpf"
path = "src/bin/abd_ebpf.rs"

[[bin]]
name = "abd-userspace"
path = "src/bin/abd_userspace.rs"

[[bin]]
name = "xdp-pass"
path = "src/bin/xdp_pass.rs"
