[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
abd-common = { path = "../abd-common", features = ["user"] }
rkyv = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true, features = ["derive"] }
log = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "client"
path = "src/main.rs"
