[package]
name = "ebpf-actors-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
ebpf-actors-common = { path = "../ebpf-actors-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

rkyv = { version = "0.8.10", default-features = false, features = ["bytecheck"] }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ebpf-actors"
path = "src/main.rs"
